--- a/src/style.pcss
+++ b/src/style.pcss
@@ -69,9 +69,9 @@ button:focus-visible {
 }
 
 #app {
-  max-width: 1280px;
+  width: 100%;
   margin: 0 auto;
-  padding: 2rem;
+  padding-block: 2rem;
   text-align: center;
 }
 
