--- a/src/style.pcss
+++ b/src/style.pcss
@@ -64,12 +64,14 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-.card {
-  padding: 2em;
+hr {
+  border: 1px solid rgb(255 255 255 / 25%);
+  margin-block: 1em;
 }
 
 #app {
   width: 100%;
+  height: 100vh;
   margin: 0 auto;
   padding-block: 2rem;
   text-align: center;
@@ -96,5 +98,9 @@ button:focus-visible {
   button {
     border-color: black;
     background-color: #f9f9f9;
+  }
+
+  hr {
+    border-color: rgb(0 0 0 / 15%);
   }
 }
