--- a/src/style.pcss
+++ b/src/style.pcss
@@ -43,7 +43,7 @@ h1 {
   line-height: 1.1;
 }
 
-button {
+button:not(.link-button), input[type="submit"] {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -53,15 +53,30 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
-}
 
-button:hover {
+  &:hover {
   border-color: #646cff;
 }
 
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  &:focus,
+  &:focus-visible {
+    outline: 4px auto -webkit-focus-ring-color;
+  }
+}
+
+.link-button {
+  font-weight: 500;
+  font-size: 1em;
+  font-family: inherit;
+  color: #646cff;
+  text-decoration: inherit;
+  border: none;
+  background: transparent;
+  cursor: pointer;
+
+  &:hover {
+    color: #535bf2;
+  }
 }
 
 hr {
