--- a/src/style.pcss
+++ b/src/style.pcss
@@ -24,6 +24,7 @@
   text-size-adjust: 100%;
 
   --boxed-background-color: #333;
+  --color-error: #ff6464;
 }
 
 a {
@@ -74,6 +75,20 @@ a.button-link {
   @media (prefers-color-scheme: light) {
     border-color: black;
     background-color: #f9f9f9;
+  }
+
+  &.text-button {
+    background-color: transparent;
+    border-color: transparent;
+    color: #ccc;
+
+    &:hover {
+      border-color: #646cff;
+    }
+
+    @media (prefers-color-scheme: light) {
+      color: #444;
+    }
   }
 }
 
@@ -126,4 +141,20 @@ hr {
   hr {
     border-color: rgb(0 0 0 / 15%);
   }
+}
+
+dialog {
+  color: rgba(255 255 255 / 87%);
+  background-color: #242424;
+  border-radius: 8px;
+  border: 1px solid #646cff;
+
+  @media (prefers-color-scheme: light) {
+    color: #213547;
+    background-color: #fff;
+  }
+}
+
+.error-message {
+  color: var(--color-error);
 }
