--- a/src/style.pcss
+++ b/src/style.pcss
@@ -1,3 +1,5 @@
+/* stylelint-disable selector-class-pattern */
+
 /*
     Style
 
@@ -15,7 +17,7 @@
   line-height: 1.5;
   font-weight: 400;
   color-scheme: light dark;
-  color: rgba(255 255 255 / 87%);
+  color: var(--text-color);
   background-color: #242424;
   font-synthesis: none;
   text-rendering: optimizelegibility;
@@ -24,6 +26,7 @@
   text-size-adjust: 100%;
 
   --boxed-background-color: #333;
+  --text-color: rgba(255 255 255 / 87%);
   --color-error: #ff6464;
 }
 
@@ -63,13 +66,13 @@ a.button-link {
   cursor: pointer;
   transition: border-color 0.25s;
 
-  &:hover {
-    border-color: #646cff;
-  }
-
   &:focus,
   &:focus-visible {
     outline: 4px auto -webkit-focus-ring-color;
+  }
+
+  &:hover:not(:disabled) {
+    border-color: #646cff;
   }
 
   @media (prefers-color-scheme: light) {
@@ -128,10 +131,10 @@ hr {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
     background-color: #fff;
 
     --boxed-background-color: #eee;
+    --text-color: #213547;
   }
 
   a:hover {
@@ -144,17 +147,59 @@ hr {
 }
 
 dialog {
-  color: rgba(255 255 255 / 87%);
+  color: var(--text-color);
   background-color: #242424;
   border-radius: 8px;
   border: 1px solid #646cff;
 
   @media (prefers-color-scheme: light) {
-    color: #213547;
     background-color: #fff;
   }
 }
 
 .error-message {
   color: var(--color-error);
+}
+
+.icon {
+  fill: var(--text-color);
+}
+
+.v-popper__popper {
+  max-width: 350px;
+
+  & p + p {
+    margin-top: 0.5em;
+  }
+}
+
+input,
+select {
+  border: 1px solid rgb(255 255 255 / 50%);
+  padding: 0 0.25em;
+  font-family: inherit;
+  background-color: #404040;
+  transition: border-color 0.1s;
+
+  &:hover {
+    border-color: #646cff;
+  }
+
+  &:focus,
+  &:focus-visible {
+    outline: 1px auto -webkit-focus-ring-color;
+  }
+
+  @media (prefers-color-scheme: light) {
+    border-color: rgb(0 0 0 / 70%);
+    background-color: white;
+  }
+}
+
+.input-error {
+  border-color: var(--color-error) !important;
+}
+
+::backdrop {
+  background-color: rgba(0 0 0 / 50%);
 }
