--- a/src/style.pcss
+++ b/src/style.pcss
@@ -188,6 +188,31 @@ select {
   }
 }
 
+.fancy-input {
+  border-radius: 8px;
+  border: 1px solid rgb(255 255 255 / 25%);
+  padding: 0.75em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  transition: border-color 0.25s;
+
+  &:hover {
+    border-color: #646cff;
+  }
+
+  &:focus,
+  &:focus-visible {
+    outline: 4px auto -webkit-focus-ring-color;
+  }
+
+  @media (prefers-color-scheme: light) {
+    border-color: rgb(0 0 0 / 15%);
+    background-color: #f9f9f9;
+  }
+}
+
 .input-error {
   border-color: var(--color-error) !important;
 }
